# SafeSignal-MVP

./: .gitignore  AUDIT_README.md  CLEARANCE-TEST-RESULTS.md  DOCUMENTATION_GAPS.md  INTEGRATION_COMPLETE.md  MOBILE-APP-404-FIX.md  MOBILE_AUDIT_SUMMARY.txt  MVP_STATUS.md  PRODUCTION_READINESS_PLAN.md  PROJECT_STATUS.md  README.md  SECURITY_CRITICAL_GAPS.md  TESTING.md
claudedocs/: AUTH_401_ANALYSIS.md  AUTH_CREDENTIALS_UPDATE.md  AUTH_FIX_SUMMARY.md  AUTH_REAL_ISSUE.md  AUTO_IP_SOLUTION_2025-11-03.md  BANKID_IMPLEMENTATION_STATUS.md  BUILDINGID_FIX_2025-11-03.md  DEBUG_JWT.md  DOCUMENTATION_ALIGNMENT_COMPLETE.md  DOC_ANALYSIS_2025-11-03.md  DOC_UPDATES_README.md  DOC_UPDATES_api-documentation.md  DOC_UPDATES_system-overview.md  DOC_UPDATE_SUMMARY_2025-11-03.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_REALITY_VS_DOCS.md  PHASE_0_COMPLETE.md  PHASE_1A_COMPLETE.md  REVISED_ROADMAP.md  all-clear-backend-complete.md  all-clear-handoff.md  all-clear-implementation-status.md  all-clear-implementation-summary.md  all-clear-mobile-complete.md  all-clear-qa-test-plan.md  all-clear-quick-reference.md  all-clear-quick-start.md  all-clear-workflow-design.md  all-clear-workflow-diagram.md  firmware-nvs-provisioning-status.md  nvs-encryption-complete.md  (+6 more)
firmware/esp32-button/main/: CMakeLists.txt  alert_queue.c  alert_queue.h  button.c  button.h  cmd_provision.c  cmd_provision.h  component.mk  main.c  mqtt.c  mqtt.h  provisioning.c  provisioning.h  rate_limit.c  rate_limit.h  runtime_config.c  runtime_config.h  time_sync.c  time_sync.h  watchdog.c  watchdog.h  wifi.c  wifi.h
(+286 files in other folders)
